src/test/ui/tool-attributes/diagnostic_item.stderr
error[E0658]: diagnostic items compiler internal support for linting
  --> $DIR/diagnostic_item.rs:1:1
   |
LL | #[rustc_diagnostic_item = "foomp"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
