src/test/ui/tool-attributes/diagnostic_item.rs
#[rustc_diagnostic_item = "foomp"] //~ ERROR compiler internal support for linting
struct Foomp;
